--- a/examples/image_classification/index.html
+++ b/examples/image_classification/index.html
@@ -73,6 +73,7 @@
               <li><a href='../super_resolution/'>Super Resolution</a></li>
               <li><a href='../emotion_analysis/'>Emotion Analysis</a></li>
               <li><a href='../speech_commands/'>Speech Commands</a></li>
+              <li><a href='../speech_recognition/'>Speech Recognition</a></li>
             </ul>
           </li>
           <li><a href='../model.html'>Models</a></li>
