Add ASR model info, fix OpenVINO link for Netron

--- a/examples/model.html
+++ b/examples/model.html
@@ -294,6 +294,27 @@
         </table>
       </div>
 
+      <h4 class='text-center'>
+        <a href='speech_recognition/'>Speech Recognition</a>
+      </h4>
+      <div class="table-responsive">
+        <table id='modelnoncv-sr' class='modelcv table table-borderless table-hover'>
+          <caption>Speech Recognition - Non-Computer Vision based models</caption>
+          <thead>
+            <tr>
+              <th scope='col'>Model</th>
+              <th scope='col'>Format</th>
+              <th scope='col'>Size</th>
+              <th scope='col'>Paper</th>
+              <th scope='col' title='Netron Model Visualizer'>Netron</th>
+              <th scope='col'>Description</th>
+            </tr>
+          </thead>
+          <tbody>
+          </tbody>
+        </table>
+      </div>
+
     </div>
   </section>
 
