[example] Supported to run image classification example with OpenCV.js.           Refined example code.

--- a/examples/speech_commands/index.html
+++ b/examples/speech_commands/index.html
@@ -418,6 +418,7 @@
   <script src='../util/base.js'></script>
   <script src='../util/modelZoo.js'></script>
   <script src='../util/BaseRunner.js'></script>
+  <script src='../util/WebNNRunner.js'></script>
   <script src='../util/BaseApp.js'></script>
   <script src='../util/BaseExample.js'></script>
   <script src='../util/BaseMircophoneExample.js'></script>
@@ -432,7 +433,6 @@
   <script src='../util/openvino/OpenVINOModelUtils.js'></script>
   <script src='../util/openvino/OpenVINOModelImporter.js'></script>
 
-  <script src='SpeechCommandsRunner.js'></script>
   <script src='SpeechCommandsExample.js'></script>
   <script src='main.js'></script>
 
