[Example] Add OpenVINO IR model for Semantic Segmentation

--- a/examples/semantic_segmentation/index.html
+++ b/examples/semantic_segmentation/index.html
@@ -384,6 +384,10 @@
   <script src='../util/tflite/schema/schema_generated.js'></script>
   <script src='../util/tflite/TfLiteModelUtils.js'></script>
   <script src='../util/tflite/TFliteModelImporter.js'></script>
+  <script src='../util/openvino/openvino.js'></script>
+  <script src='../util/openvino/OpenVINOModelUtils.js'></script>
+  <script src='../util/openvino/OpenVINOModelImporter.js'></script>
+
   <script src='src/WebGLUtils.js'></script>
   <script src='src/Shader.js'></script>
   <script src='src/GuidedFilter.js'></script>
