test performance with workload

--- a/workload/index.html
+++ b/workload/index.html
@@ -132,6 +132,7 @@
       </div>
     </div>
     <script src="../dist/webml-polyfill.js"></script>
+    <script src='../examples/util/modelZoo.js'></script>
     <script src="../examples/util/base.js"></script>
     <script src="../examples/util/faceDetector.js"></script>
     <script src="../examples/static/lib/protobuf.min.js"></script>
