--- a/examples/image_classification/index.html
+++ b/examples/image_classification/index.html
@@ -402,6 +402,9 @@
   <script src='../util/openvino/openvino.js'></script>
   <script src='../util/openvino/OpenVINOModelUtils.js'></script>
   <script src='../util/openvino/OpenVINOModelImporter.js'></script>
+  <script src='../util/caffe2/Caffe2.js'></script>
+  <script src='../util/caffe2/Caffe2ModelUtils.js'></script>
+  <script src='../util/caffe2/Caffe2ModelImporter.js'></script>
   <script src='ImageClassificationOpenCVRunner.js'></script>
   <script src='ImageClassificationExample.js'></script>
   <script src='main.js'></script>
