--- a/examples/image_classification/index.html
+++ b/examples/image_classification/index.html
@@ -308,6 +308,7 @@
       <div class='row'>
         <div class='col-lg-12 col-xs-12 text-lg-center text-center'>
           <div id='trademark' class='mb-4'></div>
+          <div id='simdnotes' class='mb-4'></div>
           <div class='webmlbadge mb-4'>
             <div class='webml-title'>WebNN API</div>
             <div id='webmlstatus'></div>
