Update simple example to nn v2 API

--- a/examples/simple/index.html
+++ b/examples/simple/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>WebML Simple Model</title>
+    <title>Hello WebNN</title>
     <link rel="stylesheet" href="../static/lib/bootstrap/css/bootstrap.min.css">   
     <style>
 		.radioInit{
@@ -35,7 +35,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark" style="width:100%">
-      <span class="navbar-brand mb-0 h1">WebML API Demo</span>
+      <span class="navbar-brand mb-0 h1">Hello WebNN</span>
     </nav>
     <div class="container" id="container">
       <div class="row" style="margin-top:20px;">
@@ -79,40 +79,6 @@
         </div>
         <div class="col">
         </div>
-      </div>
-       <div class="row" style="margin-top:50px;">
-       <div class="col"> </div>
-       <div class="col-8" align="center">
-      <label style="color: brown">Polyfill:</label>
-      <label>
-        <input id="isWebGL" type="radio" name="Backend" class="radioInit" value="WebGL" checked="checked">
-        <span class="radioSelected"></span>WebGL</label>
-
-      <label>
-        <input id="isWASM" type="radio" name="Backend" class="radioInit" value="WASM">
-        <span class="radioSelected"></span>WASM</label>
-     
-      </div>
-      <div class="col"></div>
-      </div>
-
-       <div class="row" style="margin-top:20px;">
-       <div class="col"> </div>
-       <div class="col-8" align="center">
-      <label style="color: brown">WebNN:</label>
-      <label>
-        <input id="isPREFER_SUSTAINED_SPEED" type="radio" name="Backend" class="radioInit" value="PREFER_SUSTAINED_SPEED">
-        <span class="radioSelected"></span>SUSTAINED_SPEED</label>
-        <label>
-        <input id="isPREFER_FAST_SINGLE_ANSWER" type="radio" name="Backend" class="radioInit" value="PREFER_FAST_SINGLE_ANSWER">
-        <span class="radioSelected"></span>FAST_SINGLE_ANSWER</label>
-      <label>
-        <input id="isPREFER_LOW_POWER" type="radio" name="Backend" class="radioInit" value="PREFER_LOW_POWER">
-        <span class="radioSelected"></span>LOW_POWER</label>
-
-
-      </div>
-      <div class="col"></div>
       </div>
       
       <div class="row" style="margin-top:50px;">
