Change UI and use tfjs-backend-webgpu 0.0.1-alpha.4

--- a/examples/facial_landmark_detection/index.html
+++ b/examples/facial_landmark_detection/index.html
@@ -85,6 +85,8 @@
                 <label id='l-WASM' for='WASM'>WASM</label>
                 <input type='radio' name='bp' class='d-none' id='WebGL' value='WebGL'>
                 <label id='l-WebGL' for='WebGL'>WebGL</label>
+                <input type='radio' name='bp' class='d-none' id='WebGPU' value='WebGPU'>
+                <label id='l-WebGPU' for='WebGPU'>WebGPU</label>
               </div>
               <div class='g b-webnn'>
                 <span id='backendwebnntitle'>WebNN</span>
