--- a/test/cts_v2.html
+++ b/test/cts_v2.html
@@ -20,6 +20,7 @@
   </script>
   <script src="./v2/cts/conv2d.js"></script>
   <script src="./v2/cts/pool2d.js"></script>
+  <script src="./v2/cts/reshape.js"></script>
   <script>
     mocha.globals(['jQuery']);
     mocha.run();
