[nn_v2] add tests for add and mul

--- a/test/cts_v2.html
+++ b/test/cts_v2.html
@@ -18,6 +18,8 @@
   <script>
     mocha.setup('bdd');
   </script>
+  <script src="./v2/cts/add.js"></script>
+  <script src="./v2/cts/mul.js"></script>
   <script src="./v2/cts/conv2d.js"></script>
   <script src="./v2/cts/pool2d.js"></script>
   <script src="./v2/cts/reshape.js"></script>
