[Workload] Support Caffe2 model for workload

--- a/workload/index.html
+++ b/workload/index.html
@@ -156,6 +156,9 @@
     <script src='../examples/util/openvino/openvino.js'></script>
     <script src='../examples/util/openvino/OpenVINOModelUtils.js'></script>
     <script src='../examples/util/openvino/OpenVINOModelImporter.js'></script>
+    <script src="../examples/util/caffe2/Caffe2.js"></script>
+    <script src="../examples/util/caffe2/Caffe2ModelImporter.js"></script>
+    <script src="../examples/util/caffe2/Caffe2ModelUtils.js"></script>
     <script src="../examples/skeleton_detection/src/decodePose.js"></script>
     <script src="../examples/skeleton_detection/src/helperFunc.js"></script>
     <script src="../examples/skeleton_detection/SkeletonDetectionRunner.js"></script>
