--- a/test/cts_v2.html
+++ b/test/cts_v2.html
@@ -19,6 +19,7 @@
     mocha.setup('bdd');
   </script>
   <script src="./v2/cts/add.js"></script>
+  <script src="./v2/cts/matmul.js"></script>
   <script src="./v2/cts/mul.js"></script>
   <script src="./v2/cts/conv2d.js"></script>
   <script src="./v2/cts/pool2d.js"></script>
