[nn v2] add softmax

--- a/test/cts_v2.html
+++ b/test/cts_v2.html
@@ -25,6 +25,7 @@
   <script src="./v2/cts/pool2d.js"></script>
   <script src="./v2/cts/reshape.js"></script>
   <script src="./v2/cts/relu.js"></script>
+  <script src="./v2/cts/softmax.js"></script>
   <script>
     mocha.globals(['jQuery']);
     mocha.run();
