Add OpenVINO SR-Model

--- a/examples/super_resolution/index.html
+++ b/examples/super_resolution/index.html
@@ -335,6 +335,9 @@
   <script src='../util/tflite/schema/schema_generated.js'></script>
   <script src='../util/tflite/TfLiteModelUtils.js'></script>
   <script src='../util/tflite/TFliteModelImporter.js'></script>
+  <script src='../util/openvino/openvino.js'></script>
+  <script src='../util/openvino/OpenVINOModelUtils.js'></script>
+  <script src='../util/openvino/OpenVINOModelImporter.js'></script>
 
   <script src='SuperResolutionExample.js'></script>
   <script src='main.js'></script>
