--- a/test/cts_v2.html
+++ b/test/cts_v2.html
@@ -26,6 +26,7 @@
   <script src="./v2/cts/reshape.js"></script>
   <script src="./v2/cts/relu.js"></script>
   <script src="./v2/cts/softmax.js"></script>
+  <script src="./v2/cts/transpose.js"></script>
   <script>
     mocha.globals(['jQuery']);
     mocha.run();
