--- a/examples/semantic_segmentation/index.html
+++ b/examples/semantic_segmentation/index.html
@@ -105,6 +105,19 @@
                   class='ols'></span> from <span id='polyfillbackend' class='ols'></span>: </div>
             </td>
           </tr>
+          <tr class='opencvjsbackend' style='display:none;'>
+            <th class='text-center'>Backend</th>
+            <td>
+              <input type='radio' name='opencvjsbackend' class='d-none' id='opencvjswasm' value='WASM'>
+              <label id='l-opencvjswasm' for='opencvjswasm' class='checked'>WASM</label>
+              <input type='radio' name='opencvjsbackend' class='d-none' id='opencvjssimd' value='SIMD'>
+              <label id='l-opencvjssimd' for='opencvjssimd'>SIMD</label>
+              <input type='radio' name='opencvjsbackend' class='d-none' id='opencvjsthreads' value='Threads'>
+              <label id='l-opencvjsthreads' for='opencvjsthreads'>Threads</label>
+              <input type='radio' name='opencvjsbackend' class='d-none' id='opencvjsthreadssimd' value='Threads+SIMD'>
+              <label id='l-opencvjsthreadssimd' for='opencvjsthreadssimd'>Threads+SIMD</label>
+            </td>
+          </tr>
         </tbody>
       </table>
     </div>
@@ -169,6 +182,26 @@
           </div>
         </div>
       </div>
+
+      <div class='tab-content clearfix' style='display: none;' id='progressruntime'>
+        <div class='loading-page'>
+          <div class='counter'>
+            <div class='loading'>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+            </div>
+            <p id='progressruntimestep' class="prog prog-done">Loading OpenCV.js runtime ...</p>
+          </div>
+        </div>
+      </div>
+
       <div class='tab-content clearfix' style='display: none;' id='resulterror'>
         <div class='c'>
           <div class='errortitle'></div>
@@ -375,6 +408,7 @@
   <script src='../util/modelZoo.js'></script>
   <script src='../util/BaseRunner.js'></script>
   <script src='../util/WebNNRunner.js'></script>
+  <script src='../util/OpenCVRunner.js'></script>
   <script src='../util/BaseApp.js'></script>
   <script src='../util/BaseExample.js'></script>
   <script src='../util/BaseCameraExample.js'></script>
@@ -396,6 +430,7 @@
 
   <script src='SemanticSegmentationRunner.js'></script>
   <script src='SemanticSegmentationExample.js'></script>
+  <script src='SemanticSegmentationOpenCVRunner.js'></script>
   <script src='main.js'></script>
 
 
