--- a/examples/lenet/index.html
+++ b/examples/lenet/index.html
@@ -62,7 +62,10 @@
       <div class="row" style="margin-top:50px;">
         <div class="col">
         </div>
-        <div class="col-8" align="center">
+        <div class="col-2" align="right">
+          Result:
+        </div>
+        <div class="col-2" align="left">
           <div id="result"></div>
         </div>
         <div class="col">
