[LeNet] update the results UI

--- a/examples/lenet/index.html
+++ b/examples/lenet/index.html
@@ -41,8 +41,41 @@
       <div class="row" style="margin-top:20px;">
         <div class="col">
         </div>
-        <div class="col-8" align="center">
+        <div class="col-4" align="center">
           <canvas id="visual_canvas" width=280 height=280></canvas>
+        </div>
+        <div class="col-4" align="center">
+          <div class='row text-center tc' id='inferencetitle'>
+            <h5>Prediction Result:</h5>
+          </div>
+          <div class='row text-center' id='inferenceresult'>
+            <table class='table table-sm'>
+              <thead>
+                <tr>
+                  <th scope='col'>#</th>
+                  <th scope='col'>Label</th>
+                  <th scope='col'>Probability</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope='row'>1</th>
+                  <td id='label0'></td>
+                  <td id='prob0'></td>
+                </tr>
+                <tr>
+                  <th scope='row'>2</th>
+                  <td id='label1'></td>
+                  <td id='prob1'></td>
+                </tr>
+                <tr>
+                  <th scope='row'>3</th>
+                  <td id='label2'></td>
+                  <td id='prob2'></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
         <div class="col">
         </div>
@@ -56,18 +89,7 @@
         <div class="col-2" align="left">
           <button type="button" class="btn btn-primary btn-lg" id="predict" disabled>Predict</button>
         </div>
-        <div class="col">
-        </div>
-      </div>
-      <div class="row" style="margin-top:50px;">
-        <div class="col">
-        </div>
-        <div class="col-2" align="right">
-          Result:
-        </div>
-        <div class="col-2" align="left">
-          <div id="result"></div>
-        </div>
+        <div class="col-4"></div>
         <div class="col">
         </div>
       </div>
