[LeNet] support drawing digit

--- a/examples/lenet/index.html
+++ b/examples/lenet/index.html
@@ -83,10 +83,13 @@
       <div class="row" style="margin-top:50px;">
         <div class="col">
         </div>
-        <div class="col-2" align="right">
+        <div class="col-1">
           <button type="button" class="btn btn-primary btn-lg" id="next">Next</button>
         </div>
-        <div class="col-2" align="left">
+        <div class="col-1">
+          <button type="button" class="btn btn-primary btn-lg" id="clear">Clear</button>
+        </div>
+        <div class="col-1">
           <button type="button" class="btn btn-primary btn-lg" id="predict" disabled>Predict</button>
         </div>
         <div class="col-4"></div>
@@ -98,7 +101,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js"></script>
     <script src="../../dist/webml-polyfill.js"></script>
-    <script src="mnist.js"></script>
+    <script src="lib/mnist.js"></script>
+    <script src="pen.js"></script>
     <script src="lenet.js"></script>
     <script src="main.js"></script>
     <script>
