[LeNet] fix the mnist.js path

--- a/examples/lenet/index.html
+++ b/examples/lenet/index.html
@@ -101,7 +101,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js"></script>
     <script src="../../dist/webml-polyfill.js"></script>
-    <script src="lib/mnist.js"></script>
+    <script src="mnist/mnist.js"></script>
     <script src="pen.js"></script>
     <script src="lenet.js"></script>
     <script src="main.js"></script>
