--- a/examples/image_classification/index.html
+++ b/examples/image_classification/index.html
@@ -307,6 +307,7 @@
     <div class='container'>
       <div class='row'>
         <div class='col-lg-12 col-xs-12 text-lg-center text-center'>
+          <div id='opencvspecial' class='mb-4'></div>
           <div id='trademark' class='mb-4'></div>
           <div id='simdnotes' class='mb-4'></div>
           <div class='webmlbadge mb-4'>
