--- a/examples/image_classification_opencv/index.html
+++ b/examples/image_classification_opencv/index.html
@@ -141,7 +141,7 @@
 
   <section class='ic' id='ic'>
     <div class='container' id='container'>
-      <a id='extra' href='#' class='mb-1 mt-3'>
+      <a id='extra' href='#' class='mt-3'>
         <h3 class='text-center ex' id='ictitle'>
           Image Classification
         </h3>
@@ -232,7 +232,7 @@
         </div>
       </div>
 
-      <div class='tab-content clearfix row'>
+      <div class='tab-content clearfix row' id='cvresult'>
         <div class='tab-pane text-center active col-sm' id='imagetab'>
           <div class='icdisplay' style='display: none;'>
             <div class='col-lg-12 col-xs-12 text-center'>
