[Example] Update Sample video required by stakeholders

--- a/examples/image_classification_opencv/index.html
+++ b/examples/image_classification_opencv/index.html
@@ -290,7 +290,7 @@
                 </svg>
               </i>
             </div>
-            <video id='feedMediaElement' src="./img/cat.mp4" controls loop></video>
+            <video id='feedMediaElement' src="./img/ic.mp4" controls loop></video>
           </div>
       
           <div class='box'>
