Add workload entrance in README

--- a/workload/opencv_threshold/index.html
+++ b/workload/opencv_threshold/index.html
@@ -4,12 +4,15 @@
     <meta charset="utf-8">
     <title>OpenCV.js Performance Test</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2">
+    <link rel="stylesheet" href="css/style.css">
     <style>
       body {
-        font-size: 13px;
+        font-size: 14px;
       }
       ul li {
-        font-size: 16px;
+        font-size: 14px;
+        list-style: disc;
+        display: list-item;
       }
     </style>
   </head>
@@ -17,7 +20,7 @@
     <div class="container" id="container">
       <div class="row">
         <div class="col-12">
-          <h1>OpenCV.js Performance Test</h1>
+          <h1>OpenCV.js (Image Processing) Performance Test</h1>
           <div>
             <ul>
               <li>
@@ -32,9 +35,17 @@
               <li>
                 <a href="perf_threshold_thread_simd.html">Wasm Threads + SIMD Test</a>
               </li>
-            </ul>>
+            </ul>
+          </div>
+          <div>
+            <ul>
+              <li>
+                <a href="../index.html">Web AI Workload with OpenCV.js (DNN)</a>
+              </li>
+            </ul>
           </div>
         </div>
+        <p>&copy;2020 WebNN API</p>
       </div>
     </div>
   </body>
